<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FFFF5722">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingTop="10dp">

                <ImageButton
                    android:id="@+id/backbtn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_arrow_back_24"
                    tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:adjustViewBounds="true"
            android:background="#e0af1f"
            android:scaleType="centerInside"
            android:src="@drawable/logo4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/about_title"
            android:textAlignment="center"
            android:textSize="50sp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/about_app"
            android:textAlignment="viewStart"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/author"
            android:textAlignment="center"
            android:textSize="50sp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#e0af1f">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/author_img"
                android:layout_width="212dp"
                android:layout_height="201dp"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/author"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/name_author"
            android:textAlignment="center"
            android:textSize="30sp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/about_author"
            android:textAlignment="viewStart"
            android:textSize="30sp" />



    </LinearLayout>


</ScrollView>


