<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0af1f"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="245dp"
        android:layout_height="201dp"
        android:layout_marginTop="56dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo4" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        style="@style/custom_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:ignore="MissingClass">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="#e0af1f"
                android:text="@string/login_text"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditTxt"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/usernameEditTxt"
                android:layout_width="325dp"
                android:layout_height="61dp"
                android:layout_marginTop="64dp"
                android:background="@drawable/usernamebackground"
                android:drawableLeft="@drawable/baseline_person_24"
                android:ems="10"
                android:hint="@string/username_text"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/passwordEditTxt"
                android:layout_width="325dp"
                android:layout_height="61dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/usernamebackground"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:ems="10"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameEditTxt" />

            <LinearLayout
                android:layout_width="3dp"
                android:layout_height="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

            </LinearLayout>

            <TextView
                android:id="@+id/forgottxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_text"
                android:textColor="@color/purple_700"
                android:textColorLink="@color/design_default_color_primary_variant"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginBtn"
                app:layout_constraintVertical_bias="0.118" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>